Fix atob on iOS

--- a/src/components/RepoItem/style.less
+++ b/src/components/RepoItem/style.less
@@ -4,4 +4,5 @@
   border: solid 0.5px #e5e5e5;
   margin-bottom: 5px;
   display: block;
+  text-decoration: none !important;
 }
